testing/tests/melt/negative/lvalues_12.c

int main() 
{
    int n = 0;
    !n = 2; // Logical negation converts lvalues to rvalues.
    return 0;
}
